updated docker file, and readme